[package]
name = "rustmon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
axum = "0.7"
futures = "0.3"
mongodb = "2"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
